@@ -41,7 +41,8 @@ that you established when you initialized this django site.
 
 <ul>
 <li><a href="reports/">Audit reports</a></li>
-<li><a href="stats/">Ad-Hoc Contest Statistics</a></li>
+<li><a href="parse/">Parse incoming data files</a></li>
+<li><a href="stats/">Ad-Hoc Contest Statistics Calculator</a></li>
 <!--
 <li><a href="contests/">Contests</a></li>
 <li><a href="votecounts/">Vote Counts</a></li>
