@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Audit Report for {{ object }} | {{ block.super }}{% endblock %}
+{% block title %} Ad-Hoc Contest Statistics Calculator | {{ block.super }}{% endblock %}
 
 {% block content %}
 <ul>
 <li><a href="..">Up</a></li>
 </ul>
 
-<h2>Ad-Hoc Contest Statistics</h2>
+<h2>Ad-Hoc Contest Statistics Calculator</h2>
 
 <p>Enter your data in the form, and press the button to see selection
 statistics based on the paper<br/>
