@@ -11,6 +11,7 @@
         {% block sidebar %}
         <ul>
             <li><a href="/">Home</a></li>
+	    <li><a href="/parse/">Parse incoming data files</a></li>
             <li><a href="/databrowse/">Browse all data</a></li>
             <li><a href="/admin/">Admin</a></li>
 	    {% if debug %}<li><a href="/validator/">Validation errors</a></li>{% endif %}
